--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ h11==0.14.0
 idna==3.7
 outcome==1.3.0.post0
 packaging==24.0
+psycopg2-binary==2.9.9
 pycparser==2.22
 PySocks==1.7.1
 python-dotenv==1.0.1
