--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,17 @@
+amqp==5.2.0
 asgiref==3.8.1
 attrs==23.2.0
 beautifulsoup4==4.12.3
+billiard==4.2.0
+celery==5.4.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
 dj-database-url==2.2.0
 Django==5.0.6
 django-environ==0.11.2
@@ -11,14 +19,19 @@ djangorestframework==3.15.1
 gunicorn==22.0.0
 h11==0.14.0
 idna==3.7
+kombu==5.3.7
 outcome==1.3.0.post0
 packaging==24.0
+prompt_toolkit==3.0.46
 psycopg2-binary==2.9.9
 pycparser==2.22
 PySocks==1.7.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+redis==5.0.5
 requests==2.32.3
 selenium==4.21.0
+six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.5
@@ -28,6 +41,8 @@ trio-websocket==0.11.1
 typing_extensions==4.12.0
 tzdata==2024.1
 urllib3==2.2.1
+vine==5.1.0
+wcwidth==0.2.13
 webdriver-manager==4.0.1
 whitenoise==6.6.0
 wsproto==1.2.0
