--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ billiard==4.2.0
 celery==5.4.0
 certifi==2024.2.2
 cffi==1.16.0
+channels==4.1.0
+channels-redis==4.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 click-didyoumean==0.3.1
@@ -20,6 +22,7 @@ gunicorn==22.0.0
 h11==0.14.0
 idna==3.7
 kombu==5.3.7
+msgpack==1.0.8
 outcome==1.3.0.post0
 packaging==24.0
 prompt_toolkit==3.0.46
